feat: unit tests for auth service
