# geoservice/internal/app/routes.go
@@ -26,6 +26,7 @@ func (a *App) routes() *chi.Mux {
 		})
 
 		r.Route("/auth", func(r chi.Router) {
+			r.Post("/register", a.controllers.Auth.Register)
 			r.Post("/login", a.controllers.Auth.Login)
 			r.Get("/logout", a.controllers.Auth.Logout)
 		})
